infra/k8s/web/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
